--- a/src/templates/mainp.hbs
+++ b/src/templates/mainp.hbs
@@ -30,7 +30,7 @@
         </div>
     </header>
 
-    <img src="images/6212114.jpg" style="width: 100%; height: 700px; align-items: center;">
+    <img src="6212114.jpeg" style="width: 100%; height: 700px; align-items: center;">
     <section class="text-gray-600 body-font bg-blue-200">
         <div class="container px-5 py-24 mx-auto">
             <div class="flex flex-col text-center w-full mb-20">
@@ -159,7 +159,7 @@
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
-                                <a href="iphone11">
+                                <a href="phone11">
                                 <img src="https://img.icons8.com/material-outlined/50/000000/circled-right.png"
                                     width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
