--- a/src/templates/mainp.hbs
+++ b/src/templates/mainp.hbs
@@ -195,7 +195,7 @@
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
-                                <a href="prodes">
+                                <a href="samsung">
                                 <img src="https://img.icons8.com/material-outlined/50/000000/circled-right.png"
                                     width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -232,7 +232,7 @@
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
-                                <a href="prodes">
+                                <a href="verna">
                                 <img src="https://img.icons8.com/material-outlined/50/000000/circled-right.png"
                                     width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -275,7 +275,7 @@
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
-                                <a href="prodes">
+                                <a href="oneplus">
                                 <img src="https://img.icons8.com/material-outlined/50/000000/circled-right.png"
                                     width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -311,7 +311,7 @@
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
-                                <a href="prodes">
+                                <a href="ps5">
                                 <img src="https://img.icons8.com/material-outlined/50/000000/circled-right.png"
                                     width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -347,7 +347,7 @@
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
-                                <a href="prodes">
+                                <a href="jordans">
                                 <img src="https://img.icons8.com/material-outlined/50/000000/circled-right.png"
                                     width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -383,7 +383,7 @@
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
-                                <a href="prodes">
+                                <a href="xbox">
                                 <img src="https://img.icons8.com/material-outlined/50/000000/circled-right.png"
                                     width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
