--- a/src/templates/mainp.hbs
+++ b/src/templates/mainp.hbs
@@ -23,7 +23,7 @@
             </a>
             <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
                 <a class="mr-5 hover:text-gray-900"></a>
-                <a class="mr-5 hover:text-gray-900" style="position: absolute; right: 10px;">Terms And Conditions</a>
+                <a href="terms" class="mr-5 hover:text-gray-900" style="position: absolute; right: 10px;">Terms And Conditions</a>
 
             </nav>
 
@@ -94,7 +94,7 @@
         <div class="container ml-auto mr-auto flex flex-wrap items-start">
             <div class="w-full pl-5 lg:pl-2 mb-4 mt-4">
                 <h1 class="text-3xl lg:text-4xl text-gray-700 font-extrabold">
-                    Best Sellers
+                    Best Sellers (Bid date 13-02-2022 to 20-02-2022)
                 </h1>
                 <br>
                 <form>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="flex items-center">
                             <div class="text-lg text-white font-light">
-                                ₹10,000
+                                ₹1,000
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
@@ -155,7 +155,7 @@
                         </div>
                         <div class="flex items-center">
                             <div class="text-lg text-white font-light">
-                                ₹40,000
+                                ₹3,000
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
@@ -191,7 +191,7 @@
                         </div>
                         <div class="flex items-center">
                             <div class="text-lg text-white font-light">
-                                ₹45,000
+                                ₹7,000
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
@@ -227,7 +227,7 @@
                         </div>
                         <div class="flex items-center">
                             <div class="text-lg text-white font-light">
-                                ₹6,00,000
+                                ₹1,00,000
 
                             </div>
                             <button
@@ -271,7 +271,7 @@
                         </div>
                         <div class="flex items-center">
                             <div class="text-lg text-white font-light">
-                                ₹13,000
+                                ₹5,000
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
@@ -307,7 +307,7 @@
                         </div>
                         <div class="flex items-center">
                             <div class="text-lg text-white font-light">
-                                ₹20,000
+                                ₹3,000
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
@@ -343,7 +343,7 @@
                         </div>
                         <div class="flex items-center">
                             <div class="text-lg text-white font-light">
-                                ₹10,000
+                                ₹5,000
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
@@ -379,7 +379,7 @@
                         </div>
                         <div class="flex items-center">
                             <div class="text-lg text-white font-light">
-                                ₹70,000
+                                ₹10,000
                             </div>
                             <button
                                 class="rounded-full text-white hover:text-purple-900 hover:shadow-xl focus:outline-none w-10 h-10 flex ml-auto transition duration-300">
